--- a/source code/register.css
+++ b/source code/register.css
@@ -93,10 +93,9 @@ a {
     flex-direction: column;  
 }
 .col-2 img{
-    max-width: auto;
+    max-width:90%;
     height: 85%;
     padding: 10px;
-    margin: 00px;
 }
 
 
